[metadata]
name = zynthesiser
version = 0.1
author = Thomas Steeples
author_email = thomas.steeples@cs.ox.ac.uk
description = An enumerative solver for SyGuS problems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thomasfsteeples/zynthesiser
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = zynthesiser
packages = find:
python_requires = >=3.6
install_requires =
    z3-solver
    lark-parser

[options.packages.find]
where = zynthesiser

